<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.1.RELEASE</version>
	</parent>

	<artifactId>uniprot-rest-api</artifactId>
	<groupId>org.uniprot</groupId>
	<version>1.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>UniProt REST API Aggregator</name>
	<description>
		Parent and aggregator pom configured to build certain
		parts, or all of the
		UniProt Backend project
	</description>

	<properties>
		<uniprot-store.version>${project.version}</uniprot-store.version>
		<uniprot-core.version>${project.version}</uniprot-core.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.version>3.8.0</maven.compiler.version>
		<java.version>11</java.version>
		<jacoco.version>0.8.5</jacoco.version>
		<maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>

		<spring.boot.version>2.3.1.RELEASE</spring.boot.version>
		<http-uniprot-private-url>http://wwwdev.ebi.ac.uk/uniprot/artifactory</http-uniprot-private-url>
		<failsafe.version>2.0.1</failsafe.version>
		<solr.core>8.5.2</solr.core>
		<solrj.version>8.5.2</solrj.version>
		<hamcrest-library.version>2.2</hamcrest-library.version>
		<mockito.jupiter.version>3.3.3</mockito.jupiter.version>
		<junit-platform.version>5.6.2</junit-platform.version>
		<commons-compress.version>1.20</commons-compress.version>

		<!-- Use most recent failsafe and surefire plugin versions -->
		<maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>

		<!-- Test coverage -->
		<jacoco.outputDir>${project.basedir}/../target</jacoco.outputDir>

		<!-- Unit test report path -->
		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
		<jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</jacoco.reportPath>

		<!-- Integration test report path -->
		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
		<jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</jacoco.itReportPath>

		<!-- Auto-formatting -->
		<spotless.version>1.24.1</spotless.version>
		<openapi-maven-plugin.version>0.3</openapi-maven-plugin.version>
		<dropwizard.metrics.version>4.1.9</dropwizard.metrics.version>
	</properties>

	<modules>
		<module>common-rest</module>
		<module>support-data-rest</module>
		<module>uniprotkb-rest</module>
		<module>proteome-rest</module>
		<module>uniparc-rest</module>
		<module>uniref-rest</module>
		<module>unisave-rest</module>
		<module>benchmark-rest</module>
		<module>jacoco-aggregate-report</module>
	</modules>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>net.jodah</groupId>
				<artifactId>failsafe</artifactId>
				<version>${failsafe.version}</version>
			</dependency>

			<!-- Solr Data -->
			<dependency>
				<groupId>org.apache.solr</groupId>
				<artifactId>solr-core</artifactId>
				<version>${solrj.version}</version>
				<exclusions>
					<!-- Required to prevent logger cycle -> StackOverFlowError -->
					<exclusion>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>log4j-slf4j-impl</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.apache.solr</groupId>
				<artifactId>solr-solrj</artifactId>
				<version>${solrj.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>jcl-over-slf4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.codehaus.woodstox</groupId>
						<artifactId>stax2-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.codehaus.woodstox</groupId>
						<artifactId>woodstox-core-asl</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>${commons-compress.version}</version>
			</dependency>
			<dependency>
				<groupId>uk.ac.ebi.uniprot</groupId>
				<artifactId>openapi-maven-plugin</artifactId>
				<version>${openapi-maven-plugin.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-core</artifactId>
				<version>${dropwizard.metrics.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Tests -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>${hamcrest-library.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>${hamcrest.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.jupiter.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-test-framework</artifactId>
			<version>${solrj.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Swagger dependencies -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>2.9.2</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>2.9.2</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m ${argLine}</argLine>
					<includes>
						<include>*</include>
					</includes>
				</configuration>
			</plugin>

			<!-- Auto-format code when built for consistency amongst developers' contributions -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>${spotless.version}</version>
				<configuration>
					<java>
						<googleJavaFormat>
							<version>1.7</version>
							<!-- Optional, available versions: GOOGLE, AOSP https://github.com/google/google-java-format/blob/master/core/src/main/java/com/google/googlejavaformat/java/JavaFormatterOptions.java -->
							<style>AOSP</style>
						</googleJavaFormat>
						<removeUnusedImports />
						<importOrder>
							<order>java,javax,org,com</order>
						</importOrder>
					</java>
					<formats>
						<format>
							<includes>
								<include>pom.xml</include>
								<include>src/main/**/*.xml</include>
								<include>src/main/**/*.xsd</include>
							</includes>
							<eclipseWtp>
								<type>XML</type>
							</eclipseWtp>
						</format>
					</formats>
				</configuration>
				<executions>
					<execution>
						<!-- Reformats as soon as possible -->
						<id>spotless-apply</id>
						<phase>compile</phase>
						<goals>
							<goal>apply</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>spring-releases</id>
			<url>https://repo.spring.io/libs-release</url>
		</repository>
		<repository>
			<id>spring-libs-milestone</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/libs-milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>uniprot-artifactory-release</id>
			<name>UniProt Artifactory for Releases</name>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>${http-uniprot-private-url}/release</url>
		</repository>
		<repository>
			<id>uniprot-artifactory-snapshots</id>
			<name>UniProt Artifactory for Snapshots</name>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</snapshots>
			<url>${http-uniprot-private-url}/snapshot</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>uniprot-artifactory-deploy-release</id>
			<name>Deploy Uniprot Maven Release</name>
			<url>${http-uniprot-private-url}/release</url>
		</repository>
		<snapshotRepository>
			<uniqueVersion>false</uniqueVersion>
			<id>uniprot-artifactory-deploy-snapshot</id>
			<name>Deploy Uniprot Maven Snapshot</name>
			<url>${http-uniprot-private-url}/snapshot</url>
		</snapshotRepository>
	</distributionManagement>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-releases</id>
			<url>https://repo.spring.io/libs-release</url>
		</pluginRepository>
		<pluginRepository>
			<id>spring-libs-milestone</id>
			<url>https://repo.spring.io/libs-milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>uniprot-artifactory-snapshots</id>
			<name>UniProt Artifactory for Snapshots</name>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<checksumPolicy>warn</checksumPolicy>
			</snapshots>
			<url>${http-uniprot-private-url}/snapshot</url>
		</pluginRepository>
		<pluginRepository>
			<id>uniprot-artifactory-releases-plugin</id>
			<name>UniProt Plugin Release Repository</name>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</releases>
			<url>${http-uniprot-private-url}/release</url>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<!-- active when running on jenkins -->
		<profile>
			<id>jenkins</id>
			<activation>
				<property>
					<name>env.BUILD_NUMBER</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<!-- Exclude integration tests from unit test run -->
							<excludes>
								<skipITs>${skipUTs}</skipITs>
								<exclude>**/*IT.java</exclude>
							</excludes>
							<argLine>${jacoco.agent.ut.arg}</argLine>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<configuration>
							<skipITs>${skipITs}</skipITs>
							<argLine>${jacoco.agent.it.arg}</argLine>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<!-- Sets up jacaco for unit test coverage analysis (jacoco.agent.ut.arg) -->
							<execution>
								<id>prepare-ut-agent</id>
								<phase>process-test-classes</phase>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<destFile>${jacoco.reportPath}</destFile>
									<propertyName>jacoco.agent.ut.arg</propertyName>
									<append>true</append>
								</configuration>
							</execution>
							<!-- Sets up jacaco for integration test coverage analysis (jacoco.agent.it.arg) -->
							<execution>
								<id>prepare-it-agent</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<destFile>${jacoco.itReportPath}</destFile>
									<propertyName>jacoco.agent.it.arg</propertyName>
									<append>true</append>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>